fix for bug 83611 - download dialog pops when text/html offered instead of page load, r=gagan, sr=darin, a=chofmann.